fix: add footer styling for issue on smaller height screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -750,3 +750,11 @@ footer > * {
   }
 
 }
+
+/* even smaller screens */
+
+@media (max-height: 600px) {
+  footer {
+    position: relative;
+  }
+}
